force-app/main/default/objects/Campaign/fields/Count_Of_emails_opened_by_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_emails_opened_by_Contacts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count Of Emails Opened by Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>