force-app/main/default/objects/Campaign/fields/Emails_Opened_By_Leads__c.field-meta.xml
<CustomField>
    <fullName>Emails_Opened_By_Leads__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count of Emails Opened By Leads</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>