force-app/main/default/objects/Campaign/fields/OA_click_thru_Rate__c.field-meta.xml
<CustomField>
    <fullName>OA_click_thru_Rate__c</fullName>
    <formula>IF(Emails_Opened_By_Leads__c=0 ||Count_Of_emails_opened_by_Contacts__c=0 , 0, (OA_Website_Hits__c /( Count_Of_emails_opened_by_Contacts__c + Emails_Opened_By_Leads__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Click thru Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>