force-app/main/default/objects/Campaign/fields/OA_Count_of_Campign_Members__c.field-meta.xml
<CustomField>
    <fullName>OA_Count_of_Campign_Members__c</fullName>
    <label>Count of Campign Members</label>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>