force-app/main/default/objects/Campaign/fields/OA_Open_Rate__c.field-meta.xml
<CustomField>
    <fullName>OA_Open_Rate__c</fullName>
    <formula>IF(OA_Count_of_Campign_Members__c=0,0,(Emails_Opened_By_Leads__c + Count_Of_emails_opened_by_Contacts__c )/ OA_Count_of_Campign_Members__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>