force-app/main/default/objects/Campaign/fields/OA_Region__c.field-meta.xml
<CustomField>
    <fullName>OA_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>East Coast US</fullName>
            </value>
            <value>
                <fullName>West Coast US</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>APAC &amp; MEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>