force-app/main/default/objects/Campaign/fields/OA_Website_Hits__c.field-meta.xml
<CustomField>
    <fullName>OA_Website_Hits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Website Hits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>