force-app/main/default/objects/Campaign/validationRules/Special_Characters_Not_To_Be_In_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Special_Characters_Not_To_Be_In_Name</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Name, &quot;[A-z0-9\\s]{1,75}&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Campaign Name must not have any special characters.</errorMessage>
</ValidationRule>